--- a/chocolatefudge.html
+++ b/chocolatefudge.html
@@ -1,8 +1,25 @@
 <h1>Aunt Teen's Creamy Chocolate Fudge</h1>
+    <!--Link to chocolate fudge image with source and alternate text-->
     <a href="https://www.allrecipes.com/recipe/15821/aunt-teens-creamy-chocolate-fudge/">Aunt's Teens Creamy Chocolate Fudge</a>
     <img src="https://www.allrecipes.com/thmb/i6qO59MhHpnsian4JOGcL1v73Uc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Aunt-Teens-Creamy-Chocolate-Fudge-by-My-Hot-Southern-Mess--2000-94ab5302fee34d2aa0e9ee53bf497a59.jpg" alt="a small plate of creamy chocolate fudge">
+    <!--Header for the recipe description and
+    the description text itself-->
     <h2>Creamy chocolate fudge</h2>
     <p>Absolutely incredible fudge! It is perfectly smooth, creamy, chocolately, and all-around enjoyable. Try putting the marshmallow creme in the microwave for about 15 seconds before adding it to the pan; 
         it will come out of the jar much easier.</p>
+    <h3>Ingredients
+        <ul>
+            <li>1 1/2 cups white sugar</li>
+            <li>1 (7 ounce) jar marshmellow cream/li>
+            <li>2/3 cups evaporated milk </li>
+            <li>1/4 cup butter</li>
+            <li>1/4 teaspoon salt</li>
+            <li>2 cups milk chocolate chips</li>
+            <li>1 cup semisweet chocolate chips</li>
+            <li>1/2 cups chopped nuts</li>
+            <li>1 teaspoon vanilla extract</li>
+        </ul>
+    </h3>
+    <!---->
     
     
