Added steps list comment

--- a/chocolatefudge.html
+++ b/chocolatefudge.html
@@ -20,6 +20,7 @@
             <li>1/2 cups chopped nuts</li>
             <li>1 teaspoon vanilla extract</li>
         </ul>
+    <!--Ordered list of steps to make the fudge-->
     <h3>Steps</h3>
       <ol>
         <li><strong>Step 1</strong> Line an 8-inch square pan with aluminum foil; set aside.</li>
