--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/chocolatefudge.html">Aunt Teen's Creamy Chocolate Fudge</a></li>
+        <li><a href="recipes/peanutblossoms.html">Peanut Blossom Cookies/a></li>
+        <li><a href="recipes/sugarcookieicing.html">Sugar Cookie Icing</a></li>
+    </ul>
 </body>
 
 </html>
