--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Project: Recipes</title>
+    <title id="title">Project: Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 id="Odinh1">Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/chocolatefudge.html">Aunt Teen's Creamy Chocolate Fudge</a></li>
-        <li><a href="recipes/peanutblossoms.html">Peanut Blossom Cookies/a></li>
-        <li><a href="recipes/sugarcookieicing.html">Sugar Cookie Icing</a></li>
+        <li><a id="fudgelist" href="recipes/chocolatefudge.html">Aunt Teen's Creamy Chocolate Fudge</a></li>
+        <li><a id="pumpkinlist" href="recipes/peanutblossoms.html">Peanut Blossom Cookies</li>
+        <li><a id="cookielist" href="recipes/sugarcookieicing.html">Sugar Cookie Icing</a></li>
     </ul>
 </body>
 
