--- a/recipes/sugarcookieicing.html
+++ b/recipes/sugarcookieicing.html
@@ -1,4 +1,5 @@
 <h1>Sugar Cookie Icing</h1>
+<link rel="stylesheet" href="styles.css">
 <!--Link to sugar cookie icing image with source and alternate text-->
     <a href="https://www.allrecipes.com/recipe/11587/sugar-cookie-icing/">Sugar Cookie Icing</a>
     <img src="https://www.allrecipes.com/thmb/fr7Yw-nlwhF9nChD3ponPoD6kU0=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/540939_original-2000-c7f0cd6cfc0a41848887f6660e594f2e.jpg" alt="a small plate of snowflake cookies">
