--- a/recipes/peanutblossoms.html
+++ b/recipes/peanutblossoms.html
@@ -1,4 +1,5 @@
 <h1>Peanut Blossom Cookies</h1>
+<link rel="stylesheet" href="styles.css">
 <!--Link to blossom cookie image with source and alternate text-->
     <a href="https://www.allrecipes.com/recipe/9920/peanut-blossoms-ii/">Peanut Blossom Cookies</a>
     <img src="https://www.allrecipes.com/thmb/eju2zPGVMuTj7VpKcBAZLBeVMTw=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/9920-peanut-blossoms-VAT-hero-1x1-1-b045a7c75d26404abb176910adb6e2d9.jpg" alt="a small plate of peanut blossom cookies">
