--- a/index.html
+++ b/index.html
@@ -8,12 +8,24 @@
 </head>
 
 <body>
-    <h1 id="Odinh1">Odin Recipes</h1>
-    <ul>
-        <li><a id="fudgelist" href="recipes/chocolatefudge.html">Aunt Teen's Creamy Chocolate Fudge</a></li>
-        <li><a id="pumpkinlist" href="recipes/peanutblossoms.html">Peanut Blossom Cookies</li>
-        <li><a id="cookielist" href="recipes/sugarcookieicing.html">Sugar Cookie Icing</a></li>
-    </ul>
+    <div class="headerdiv">
+        <header id="header">Recipe gallery</header>
+    </div>
+        <div class="listdiv">
+            <div class="chickendiv">
+                <img src="images/download.jpeg">
+                <p><a href="">Sweet and sour chicken</a></p>
+            </div>
+            <div class="piediv">
+                <img src="images/applepie.jpeg">
+                <p><a href="">Apple pie</a></p>
+            </div>
+            <div class="cookiediv">
+                <img src="images/chocolate-crinkle-cookies-2-1.jpg">
+                <p><a href="">Chocolate crinkle cookies</a></p>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
