Edited index, CSS files, created recipe pages
Edits to index, CSS, created recipe files

--- a/index.html
+++ b/index.html
@@ -14,18 +14,17 @@
         <div class="listdiv">
             <div class="chickendiv">
                 <img src="images/download.jpeg">
-                <p><a href="">Sweet and sour chicken</a></p>
+                <p><a href="chicken.html">Sweet and sour chicken</a></p>
             </div>
             <div class="piediv">
                 <img src="images/applepie.jpeg">
-                <p><a href="">Apple pie</a></p>
+                <p><a href="apple.html">Apple pie</a></p>
             </div>
             <div class="cookiediv">
                 <img src="images/chocolate-crinkle-cookies-2-1.jpg">
-                <p><a href="">Chocolate crinkle cookies</a></p>
+                <p><a href="crinkle.html">Chocolate crinkle cookies</a></p>
             </div>
         </div>
     </div>
 </body>
-
 </html>
