Updated index title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="headerdiv">
-        <header id="header">Recipe gallery</header>
+        <header id="header">Aydan's gallery of good recipes</header>
     </div>
         <div class="listdiv">
             <div class="chickendiv">
