--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title id="title">Project: Recipes</title>
@@ -14,15 +13,15 @@
         <div class="listdiv">
             <div class="chickendiv">
                 <img src="images/download.jpeg">
-                <p><a href="chicken.html">Sweet and sour chicken</a></p>
+                <p><a href="recipes/chicken.html">Sweet and sour chicken</a></p>
             </div>
             <div class="piediv">
                 <img src="images/applepie.jpeg">
-                <p><a href="apple.html">Apple pie</a></p>
+                <p><a href="recipes/pie.html">Apple pie</a></p>
             </div>
             <div class="cookiediv">
                 <img src="images/chocolate-crinkle-cookies-2-1.jpg">
-                <p><a href="crinkle.html">Chocolate crinkle cookies</a></p>
+                <p><a href="recipes/chocolate.html">Chocolate crinkle cookies</a></p>
             </div>
         </div>
     </div>
