Finished chicken recipe page

--- a/chicken.html
+++ b/chicken.html
@@ -8,7 +8,31 @@
 
 <body class="page1">
     <div class="bodydiv">
-        <p>hello</p>
+        <h1>Sweet and sour chicken</h1>
+        <img class="foodimg" src="images/download.jpeg">
+        <h2 class="description">Sweet and sour chicken that takes just 15 minues to make and tastes better than takeout!</h2>
+        <p class="ingredients">Ingredients:
+            <ul>
+                <li>Granulated sugar</li>
+                <li>Brown sugar</li>
+                <li>Apple cider vinegar</li>
+                <li>Ketchup</li>
+                <li>Low-sodium soy sauce</li>
+                <li>Sesame oil</li>
+                <li>Garlic</li>
+                <li>Cornstarch</li>
+                <li>Chicken breasts</li>
+                <li>Olive oil</li>
+            </ul>
+        </p>
+        <h2>How to make:</h2>
+        <p><strong>1. Make the sweet and sour sauce: </strong>It consists of sugar, apple cider vinegar, ketchup, soy sauce, sesame oil, brown sugar, garlic, corn starch, and water. Add everything but the water and cornstarch to a saucepan.</p>
+        <p><strong>2. Bring the sauce to a boil, </strong>then combine the water and cornstarch in a seperate bowl before adding it to a homemade sweet and sour sauce.</p>
+        <p><strong>3. </strong>Let that bubble away for a few minutes until it thickens up</p>
+        <p><strong>4. Make the chicken: </strong>Add the diced chicken into a baggie until the cornstarch, salt, and pepper and give it a good shake to coat the chicken pieces fully</p>
+        <p><strong>5. </strong>Fry the chicken in a skillet with a few tablespoons of olive oil (no need to deep fry).</p>
+        <p><strong>6. </strong>Once the chicken is cooked, stir in the sweet and sour sauce and continue cooking until the chicken is coated in sauce and heated through</p>
+        <p><strong>7. </strong>Serve and enjoy!</p>
     </div>
 </body>
 </html>
