--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
         <div class="listdiv">
             <div class="chickendiv">
                 <img src="images/download.jpeg">
-                <p><a href="Project-Recipe-Page/chicken.html">Sweet and sour chicken</a></p>
+                <p><a href="chicken.html">Sweet and sour chicken</a></p>
             </div>
             <div class="piediv">
                 <img src="images/applepie.jpeg">
-                <p><a href="Project-Recipe-Page/pie.html">Apple pie</a></p>
+                <p><a href="pie.html">Apple pie</a></p>
             </div>
             <div class="cookiediv">
                 <img src="images/chocolate-crinkle-cookies-2-1.jpg">
-                <p><a href="Project-Recipe-Page/chocolate.html">Chocolate crinkle cookies</a></p>
+                <p><a href="chocolate.html">Chocolate crinkle cookies</a></p>
             </div>
         </div>
     </div>
