Filled in pie recipe page header and ingredients

--- a/chicken.html
+++ b/chicken.html
@@ -10,7 +10,7 @@
     <div class="bodydiv">
         <h1>Sweet and sour chicken</h1>
         <img class="foodimg" src="images/download.jpeg">
-        <h2 class="description">Sweet and sour chicken that takes just 15 minues to make and tastes better than takeout!</h2>
+        <h2 class="description">Sweet and sour chicken that takes just 15 minutes to make and tastes better than takeout!</h2>
         <p class="ingredients">Ingredients:
             <ul>
                 <li>Granulated sugar</li>
