--- a/pie.html
+++ b/pie.html
@@ -3,12 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <title id="title">Apple pie</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body class="page1">
     <div class="bodydiv">
-        
+        <h1>Apple pie</h1>
+        <img class="foodimg" src="images/applepie.jpeg">
+        <h2 class="description">Delicious apple pie that will smell just as good as it tastes!</h2>
+        <p class="ingredients">Ingredients:
+            <ul>
+                <li>Dough for double-crust pie</li>
+                <li>1/3 cup sugar</li>
+                <li>1/3 cup packed brown sugar</li>
+                <li>1/4 cup all-purpose flour</li>
+                <li>1 teaspoon ground cinnamon</li>
+                <li>1/4 teaspoon ground nutmeg</li>
+                <li>6 to 7 thinly sliced peeled tart apples</li>
+                <li>1 tablespoon butter</li>
+                <li>1 tablespoon lemon juice</li>
+                <li>1 large egg white</li>
+            </ul>
+        </p>
+        <h2>How to make:</h2>
+        <p><strong>1. Make the sweet and sour sauce: </strong>It consists of sugar, apple cider vinegar, ketchup, soy sauce, sesame oil, brown sugar, garlic, corn starch, and water. Add everything but the water and cornstarch to a saucepan.</p>
+        <p><strong>2. Bring the sauce to a boil, </strong>then combine the water and cornstarch in a seperate bowl before adding it to a homemade sweet and sour sauce.</p>
+        <p><strong>3. </strong>Let that bubble away for a few minutes until it thickens up</p>
+        <p><strong>4. Make the chicken: </strong>Add the diced chicken into a baggie until the cornstarch, salt, and pepper and give it a good shake to coat the chicken pieces fully</p>
+        <p><strong>5. </strong>Fry the chicken in a skillet with a few tablespoons of olive oil (no need to deep fry).</p>
+        <p><strong>6. </strong>Once the chicken is cooked, stir in the sweet and sour sauce and continue cooking until the chicken is coated in sauce and heated through</p>
+        <p><strong>7. </strong>Serve and enjoy!</p>
     </div>
 </body>
 </html>
