Filled in Apple pie directions section

--- a/pie.html
+++ b/pie.html
@@ -26,13 +26,9 @@
             </ul>
         </p>
         <h2>How to make:</h2>
-        <p><strong>1. Make the sweet and sour sauce: </strong>It consists of sugar, apple cider vinegar, ketchup, soy sauce, sesame oil, brown sugar, garlic, corn starch, and water. Add everything but the water and cornstarch to a saucepan.</p>
-        <p><strong>2. Bring the sauce to a boil, </strong>then combine the water and cornstarch in a seperate bowl before adding it to a homemade sweet and sour sauce.</p>
-        <p><strong>3. </strong>Let that bubble away for a few minutes until it thickens up</p>
-        <p><strong>4. Make the chicken: </strong>Add the diced chicken into a baggie until the cornstarch, salt, and pepper and give it a good shake to coat the chicken pieces fully</p>
-        <p><strong>5. </strong>Fry the chicken in a skillet with a few tablespoons of olive oil (no need to deep fry).</p>
-        <p><strong>6. </strong>Once the chicken is cooked, stir in the sweet and sour sauce and continue cooking until the chicken is coated in sauce and heated through</p>
-        <p><strong>7. </strong>Serve and enjoy!</p>
+        <p><strong>1. </strong>Preheat oven to 375F. On a lightly floured surface, roll half the dough to a 1/8-in thick circle; transfer to a 9in pie plate. Chill while preparing filling. In a small bowl, combine sugars, flour and spices. In a large bowl toss appples with lemon juice. Add sugar mixture; toss to coat. Add filling to crust; dot with butter.</p>
+        <p><strong>2. </strong>Roll remaining dough to a 1/8in thick circle. Place over filling. Trim, sesal and flute edgs. Cut slits in top. Beat egg white until foamy; brush over crust. If desired, sprinkle with turbinado sugar and ground cinnamon.</p>
+        <p><strong>3. </strong>Bake on the lowest rack 60-70 minutes, until crust is golden brown and filling is bubbly, covering with foil halfway if crust begins to get too dark. Cool on a wire rack. If desired serve with ice cream and caramel sauce.</p>
     </div>
 </body>
 </html>
