Added all cookie recipe page elements, ingredients

--- a/chocolate.html
+++ b/chocolate.html
@@ -2,13 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title id="title">Chocolate crinkle cookies</title>
-    <link rel="stylesheet" href="styles.css">
+    <title id="title">Apple pie</title>
+    <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 
-<body>
+<body class="page1">
     <div class="bodydiv">
-        
+        <h1>Apple pie</h1>
+        <img class="foodimg" src="images/chocolate-crinkle-cookies-2-1.jpg">
+        <h2 class="description">Thick and soft-baked cookies with a little extra chocolate in the middle!</h2>
+        <p class="ingredients">Ingredients:
+            <ul>
+                <li>1/2 cup unsalted butter, softened to room temperature</li>
+                <li>1/2 cup granulated sugar</li>
+                <li>1/2 cup packed light or dark brown sugar</li>
+                <li>1 large egg, room temp</li>
+                <li>1 teaspoon pure vanilla</li>
+                <li>1 cup all-purpose extract</li>
+                <li>1 cup + 2 tablespoons unsweetened natural cocoa powder</li>
+                <li>1 teaspoon baking soda</li>
+                <li>1/8 teaspoon salt</li>
+                <li>1 cup mini or regular size semi-sweet chocolate chips</li>
+            </ul>
+        </p>
+        <h2>How to make:</h2>
+        <p><strong>1. </strong>Preheat oven to 375F. On a lightly floured surface, roll half the dough to a 1/8-in thick circle; transfer to a 9in pie plate. Chill while preparing filling. In a small bowl, combine sugars, flour and spices. In a large bowl toss appples with lemon juice. Add sugar mixture; toss to coat. Add filling to crust; dot with butter.</p>
+        <p><strong>2. </strong>Roll remaining dough to a 1/8in thick circle. Place over filling. Trim, sesal and flute edgs. Cut slits in top. Beat egg white until foamy; brush over crust. If desired, sprinkle with turbinado sugar and ground cinnamon.</p>
+        <p><strong>3. </strong>Bake on the lowest rack 60-70 minutes, until crust is golden brown and filling is bubbly, covering with foil halfway if crust begins to get too dark. Cool on a wire rack. If desired serve with ice cream and caramel sauce.</p>
     </div>
 </body>
 </html>
