Filled in ingredients for crinkle cookie page

--- a/chocolate.html
+++ b/chocolate.html
@@ -26,9 +26,13 @@
             </ul>
         </p>
         <h2>How to make:</h2>
-        <p><strong>1. </strong>Preheat oven to 375F. On a lightly floured surface, roll half the dough to a 1/8-in thick circle; transfer to a 9in pie plate. Chill while preparing filling. In a small bowl, combine sugars, flour and spices. In a large bowl toss appples with lemon juice. Add sugar mixture; toss to coat. Add filling to crust; dot with butter.</p>
-        <p><strong>2. </strong>Roll remaining dough to a 1/8in thick circle. Place over filling. Trim, sesal and flute edgs. Cut slits in top. Beat egg white until foamy; brush over crust. If desired, sprinkle with turbinado sugar and ground cinnamon.</p>
-        <p><strong>3. </strong>Bake on the lowest rack 60-70 minutes, until crust is golden brown and filling is bubbly, covering with foil halfway if crust begins to get too dark. Cool on a wire rack. If desired serve with ice cream and caramel sauce.</p>
+        <p><strong>1. </strong>Gather ingredients</p>
+        <p><strong>2. </strong>Mix sugar, cocoa, and oil together in a medium bowl. Beat in eggs, one at a time, until combined. Stir in vanilla.</p>
+        <p><strong>3. </strong>Combine flour, baking powder, and salt in another bowl. Gradually stir dry ingredients into the wet ingredients until thoroughly mixed. Cover dough and refrigerator for at least 4 hours.</p>
+        <p><strong>4. </strong>Preheat the oven to 350 degrees F (175 degrees C). Line two baking sheets with parchment paper.</p>
+        <p><strong>5. </strong>Roll or scoop chilled dough into 1-inch balls. Coat each ball in confectioners' sugar and place 1 inch apart on the prepared cookie sheets.</p>
+        <p><strong>6. </strong>Bake in the preheated oven for 10 to 12 minutes. Let stand on the cookie sheet for a few minutes before transferring to wire racks to cool.</p>
+        <p><strong>7. </strong>Repeat Steps 4 and 5 to make remaining batches.</p>
     </div>
 </body>
 </html>
