Updated class labels for cards, added bread page

--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
         <header id="header">Aydan's gallery of good recipes</header>
     </div>
         <div class="listdiv">
-            <div class="chickendiv">
+            <div class="card">
                 <img src="images/download.jpeg">
                 <p><a href="chicken.html">Sweet and sour chicken</a></p>
             </div>
-            <div class="piediv">
+            <div class="card">
                 <img src="images/applepie.jpeg">
-                <p><a href="pie.html">Apple pie</a></p>
+                <p><a href="pie.html">Apple Pie</a></p>
             </div>
-            <div class="cookiediv">
+            <div class="card">
                 <img src="images/chocolate-crinkle-cookies-2-1.jpg">
-                <p><a href="chocolate.html">Chocolate crinkle cookies</a></p>
+                <p><a href="chocolate.html">Chocolate Crinkle Cookies</a></p>
+            </div>
+            <div class="card">
+                <img src="images/monkeybread.jpeg">
+                <p><a href="monkeybread.html">Monkey Bread</a></p>
             </div>
         </div>
     </div>
