--- a/monkeybread.html
+++ b/monkeybread.html
@@ -10,28 +10,23 @@
     <div class="bodydiv">
         <h1>Monkey Bread</h1>
         <img class="foodimg" src="images/monkeybread.jpeg">
-        <h2 class="description"></h2>
+        <h2 class="description">A sticky and simple recipe that is quite easy to make despite it's extraordinary flavor!</h2>
         <p class="ingredients">Ingredients:
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>3 cans buttermilk biscuits</li>
+                <li>1 c. granulated sugar</li>
+                <li>2 to 3 tsp. cinnamon</li>
+                <li>2 sticks butter</li>
+                <li>1/2 c. brown sugar</li>
             </ul>
         </p>
         <h2>How to make:</h2>
-        <p><strong>1. Make the sweet and sour sauce: </strong>It consists of sugar, apple cider vinegar, ketchup, soy sauce, sesame oil, brown sugar, garlic, corn starch, and water. Add everything but the water and cornstarch to a saucepan.</p>
-        <p><strong>2. Bring the sauce to a boil, </strong>then combine the water and cornstarch in a seperate bowl before adding it to a homemade sweet and sour sauce.</p>
-        <p><strong>3. </strong>Let that bubble away for a few minutes until it thickens up</p>
-        <p><strong>4. Make the chicken: </strong>Add the diced chicken into a baggie until the cornstarch, salt, and pepper and give it a good shake to coat the chicken pieces fully</p>
-        <p><strong>5. </strong>Fry the chicken in a skillet with a few tablespoons of olive oil (no need to deep fry).</p>
-        <p><strong>6. </strong>Once the chicken is cooked, stir in the sweet and sour sauce and continue cooking until the chicken is coated in sauce and heated through</p>
+        <p><strong>1. </strong>Preheat the oven to 350°.</p>
+        <p><strong>2. </strong>Open up all three cans of biscuits and cut each biscuit into quarters.</p>
+        <p><strong>3. </strong>Next, combine the white sugar with 2 to 3 teaspoons of cinnamon. (3 teaspoons of cinnamon gives it a fairly strong cinnamon flavor. If you're not so hot on cinnamon, cut it back to 2 teaspoons.) Dump these into a 1 gallon zip-up bag and shake to mix evenly.</p>
+        <p><strong>4. </strong>Drop all of the biscuit quarters into the cinnamon-sugar mix. Once all the biscuit quarters are in the bag seal it and give it a vigorous shake. This will get all those pieces unstuck from one another and nicely coated with cinnamon-sugar. Spread these nuggets out evenly in the Bundt pan.</p>
+        <p><strong>5. </strong>At this point, you're going to want to melt the two sticks of butter together with 1/2 cup of brown sugar in a saucepan over medium-high heat. This can be light or dark brown sugar. Cook butter-sugar mixture, stirring for a few minutes until the two become one. Once the brown sugar butter has become one color, you can pour it over the biscuits.</p>
+        <p><strong>6. </strong>Bake for about 30 to 40 minutes until the crust is a deep dark brown on top. When it's finished cooking, remove it from the oven. If you have the willpower, allow it to cool for about 15 to 30 minutes before turning it over onto a plate.</p>
         <p><strong>7. </strong>Serve and enjoy!</p>
     </div>
 </body>
