--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                 <img src="images/monkeybread.jpeg">
                 <p><a href="monkeybread.html">Monkey Bread</a></p>
             </div>
+            <div class="card">
+                <img src="images/bananabread.jpeg">
+                <p><a href="monkeybread.html">Banana Bread</a></p>
+            </div>
         </div>
     </div>
 </body>
