Edited new page links elements, added ingredients

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="card">
                 <img src="images/bananabread.jpeg">
-                <p><a href="monkeybread.html">Banana Bread</a></p>
+                <p><a href="bananabread.html">Banana Bread</a></p>
             </div>
         </div>
     </div>
