--- a/bananabread.html
+++ b/bananabread.html
@@ -9,15 +9,18 @@
 <body class="page1">
     <div class="bodydiv">
         <h1>Banana Bread</h1>
-        <img class="foodimg" src="images/monkeybread.jpeg">
-        <h2 class="description"></h2>
+        <img class="foodimg" src="images/bananabread.jpeg">
+        <h2 class="description">A great use of older bananas and not need for a mixer either!</h2>
         <p class="ingredients">Ingredients:
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>2 to 3 ripe bananas, peeled.</li>
+                <li>1/3 cups butter, unsalted or salted, melted</li>
+                <li>1/2 teaspoon baking soda</li>
+                <li>1 pinch salt</li>
+                <li>3/4 cup sugar</li>
+                <li>1 large egg ,beaten</li>
+                <li>1 teaspoon vanilla extract</li>
+                <li>1 1/2 cups all-purpose flour</li>
             </ul>
         </p>
         <h2>How to make:</h2>
