--- a/bananabread.html
+++ b/bananabread.html
@@ -24,13 +24,11 @@
             </ul>
         </p>
         <h2>How to make:</h2>
-        <p><strong>1. </strong></p>
-        <p><strong>2. </strong></p>
-        <p><strong>3. </strong></p>
-        <p><strong>4. </strong></p>
-        <p><strong>5. </strong></p>
-        <p><strong>6. </strong></p>
-        <p><strong>7. </strong>Serve and enjoy!</p>
+        <p><strong>1. </strong>Preheat the oven to 350F, and butter an 8 x 4 inch loaf pan.</p>
+        <p><strong>2. </strong>In a mixing bowl, mash the ripe bananas with a fork until completely smooth. Stir the melted butter into the mashed bananas</p>
+        <p><strong>3. </strong>Mix in the baking soda and salt. Stir in the sugar, beaten egg, and vanilla extract. Mix in the flour.</p>
+        <p><strong>4. </strong>Pour the batter into your prepared loaf pan.</p>
+        <p><strong>5. </strong>Remove from oven and let cool in the pan for a few minutes. Then remove the banana bread from the pan and let cool completely before serving. Slice and serve.</p>
     </div>
 </body>
 </html>
