Added label comments to cards on index page

--- a/index.html
+++ b/index.html
@@ -11,22 +11,27 @@
         <header id="header">Aydan's gallery of good recipes</header>
     </div>
         <div class="listdiv">
+            <!--Sweet and sour chicken card-->
             <div class="card">
                 <img src="images/download.jpeg">
                 <p><a href="chicken.html">Sweet and sour chicken</a></p>
             </div>
+            <!--Apple Pie card--><!---->
             <div class="card">
                 <img src="images/applepie.jpeg">
                 <p><a href="pie.html">Apple Pie</a></p>
             </div>
+            <!--Chocolate Crinkle Cookies card-->
             <div class="card">
                 <img src="images/chocolate-crinkle-cookies-2-1.jpg">
                 <p><a href="chocolate.html">Chocolate Crinkle Cookies</a></p>
             </div>
+            <!--Monkey Bread card-->
             <div class="card">
                 <img src="images/monkeybread.jpeg">
                 <p><a href="monkeybread.html">Monkey Bread</a></p>
             </div>
+            <!--Banana Bread card-->
             <div class="card">
                 <img src="images/bananabread.jpeg">
                 <p><a href="bananabread.html">Banana Bread</a></p>
