Moved page links from anchor tags to img tags

--- a/index.html
+++ b/index.html
@@ -13,28 +13,28 @@
         <div class="listdiv">
             <!--Sweet and sour chicken card-->
             <div class="card">
-                <img src="images/download.jpeg">
-                <p><a href="chicken.html">Sweet and sour chicken</a></p>
+                <a href="chicken.html"><img src="images/download.jpeg"></a>
+                <p>Sweet and sour chicken</p>
             </div>
             <!--Apple Pie card--><!---->
             <div class="card">
-                <img src="images/applepie.jpeg">
-                <p><a href="pie.html">Apple Pie</a></p>
+                <a href="pie.html"><img src="images/applepie.jpeg"></a>
+                <p>Apple Pie</p>
             </div>
             <!--Chocolate Crinkle Cookies card-->
             <div class="card">
-                <img src="images/chocolate-crinkle-cookies-2-1.jpg">
-                <p><a href="chocolate.html">Chocolate Crinkle Cookies</a></p>
+                <a href="chocolate.html"><img src="images/chocolate-crinkle-cookies-2-1.jpg"></a>
+                <p>Chocolate Crinkle Cookies</p>
             </div>
             <!--Monkey Bread card-->
             <div class="card">
-                <img src="images/monkeybread.jpeg">
-                <p><a href="monkeybread.html">Monkey Bread</a></p>
+                <a href="monkeybread.html"><img src="images/monkeybread.jpeg"></a>
+                <p>Monkey Bread</p>
             </div>
             <!--Banana Bread card-->
             <div class="card">
-                <img src="images/bananabread.jpeg">
-                <p><a href="bananabread.html">Banana Bread</a></p>
+                <a href="bananabread.html"><img src="images/bananabread.jpeg"></a>
+                <p>Banana Bread</p>
             </div>
         </div>
     </div>
