New index page card and img for new recipe

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                 <a href="bananabread.html"><img src="images/bananabread.jpeg"></a>
                 <p>Banana Bread</p>
             </div>
+            <div class="card">
+                <a href=""><img src=""></a>
+                <p>Icy Carambola</p>
+            </div>
         </div>
     </div>
 </body>
