Updated card labels so page text isn't yellow

--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
             <!--Sweet and sour chicken card-->
             <div class="card">
                 <a href="chicken.html"><img src="images/download.jpeg"></a>
-                <p>Sweet and sour chicken</p>
+                <p id="cardLabels">Sweet and sour chicken</p>
             </div>
             <!--Apple Pie card--><!---->
             <div class="card">
                 <a href="pie.html"><img src="images/applepie.jpeg"></a>
-                <p>Apple Pie</p>
+                <p id="cardLabels">Apple Pie</p>
             </div>
             <!--Chocolate Crinkle Cookies card-->
             <div class="card">
                 <a href="chocolate.html"><img src="images/chocolate-crinkle-cookies-2-1.jpg"></a>
-                <p>Chocolate Crinkle Cookies</p>
+                <p id="cardLabels">Chocolate Crinkle Cookies</p>
             </div>
             <!--Monkey Bread card-->
             <div class="card">
                 <a href="monkeybread.html"><img src="images/monkeybread.jpeg"></a>
-                <p>Monkey Bread</p>
+                <p id="cardLabels">Monkey Bread</p>
             </div>
             <!--Banana Bread card-->
             <div class="card">
                 <a href="bananabread.html"><img src="images/bananabread.jpeg"></a>
-                <p>Banana Bread</p>
+                <p id="cardLabels">Banana Bread</p>
             </div>
             <div class="card">
-                <a href=""><img src=""></a>
-                <p>Icy Carambola</p>
+                <a href="starfruit.html"><img src="images/starfruit.jpeg"></a>
+                <p id="cardLabels">Icy Carambola</p>
             </div>
         </div>
     </div>
