--- a/starfruit.html
+++ b/starfruit.html
@@ -10,25 +10,22 @@
     <div class="bodydiv">
         <h1>Icy Carambola</h1>
         <img class="foodimg" src="images/starfruit.jpeg">
-        <h2 class="description">Delicious apple pie that will smell just as good as it tastes!</h2>
+        <h2 class="description">An ice beverage that is a blend of apple, pear, and citrues fruit flavors</h2>
         <p class="ingredients">Ingredients:
             <ul>
-                <li>Dough for double-crust pie</li>
-                <li>1/3 cup sugar</li>
-                <li>1/3 cup packed brown sugar</li>
-                <li>1/4 cup all-purpose flour</li>
-                <li>1 teaspoon ground cinnamon</li>
-                <li>1/4 teaspoon ground nutmeg</li>
-                <li>6 to 7 thinly sliced peeled tart apples</li>
-                <li>1 tablespoon butter</li>
-                <li>1 tablespoon lemon juice</li>
-                <li>1 large egg white</li>
+                <li>1/2 cup pineapple juice</li>
+                <li>4 carambolas (about 1 1/4 pounds) cut into 1/2 inch slices</li>
+                <li>3 tablespoons ginger syrup</li>
+                <li>1 tablespoon fresh lemon juice</li>
+                <li>2 cups crushed ice</li>
+                <li>1/2 cups lemon-lime flavored sparkling water</li>
+                <li>Carambola slices</li>
             </ul>
         </p>
         <h2>How to make:</h2>
-        <p><strong>1. </strong>Preheat oven to 375F. On a lightly floured surface, roll half the dough to a 1/8-in thick circle; transfer to a 9in pie plate. Chill while preparing filling. In a small bowl, combine sugars, flour and spices. In a large bowl toss appples with lemon juice. Add sugar mixture; toss to coat. Add filling to crust; dot with butter.</p>
-        <p><strong>2. </strong>Roll remaining dough to a 1/8in thick circle. Place over filling. Trim, sesal and flute edgs. Cut slits in top. Beat egg white until foamy; brush over crust. If desired, sprinkle with turbinado sugar and ground cinnamon.</p>
-        <p><strong>3. </strong>Bake on the lowest rack 60-70 minutes, until crust is golden brown and filling is bubbly, covering with foil halfway if crust begins to get too dark. Cool on a wire rack. If desired serve with ice cream and caramel sauce.</p>
+        <p><strong>1. </strong>Place pineapple juice and carambola slices in a blender; process until smooth. Pour mixture through a sieve into a pitcher to measure 2 cups. Discard solids. Stir in ginger syrup and lemon juice. Cover and refrigerate 45 minutes or until thoroughly chilled.</p>
+        <p><strong>2. </strong>Fill each of 2 glasses with 1 cup crushed ice. Pour star fruit mixture over ice. Add 1/4 cup sparkling water to each glass. Garnish with carambola slices, if desired.</p>
+        <p><strong>3. </strong></p>
     </div>
 </body>
 </html>
