Comment on index page for star fruit card

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                 <a href="bananabread.html"><img src="images/bananabread.jpeg"></a>
                 <p id="cardLabels">Banana Bread</p>
             </div>
+            <!--Icy Carambola / Star fruit Quencher card-->
             <div class="card">
                 <a href="starfruit.html"><img src="images/starfruit.jpeg"></a>
                 <p id="cardLabels">Icy Carambola</p>
