New pages folder, moved recipes pages into it

--- a/Pages/chicken.html
+++ b/Pages/chicken.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title id="title">Sweet and sour chicken</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body class="page1">
     <div class="bodydiv">
         <h1>Sweet and sour chicken</h1>
-        <img class="foodimg" src="images/download.jpeg">
+        <img class="foodimg" src="../images/download.jpeg">
         <h2 class="description">Sweet and sour chicken that takes just 15 minutes to make and tastes better than takeout!</h2>
         <p class="ingredients">Ingredients:
             <ul>
