--- a/Pages/chicken.html
+++ b/Pages/chicken.html
@@ -9,7 +9,7 @@
 <body class="page1">
     <div class="bodydiv">
         <h1>Sweet and sour chicken</h1>
-        <img class="foodimg" src="../images/download.jpeg">
+        <img class="foodimg" src="../images/chicken.jpeg">
         <h2 class="description">Sweet and sour chicken that takes just 15 minutes to make and tastes better than takeout!</h2>
         <p class="ingredients">Ingredients:
             <ul>
