Updated HTML links account for new file paths

--- a/Pages/bananabread.html
+++ b/Pages/bananabread.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title id="title">Banana Bread</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body class="page1">
     <div class="bodydiv">
         <h1>Banana Bread</h1>
-        <img class="foodimg" src="images/bananabread.jpeg">
+        <img class="foodimg" src="../images/bananabread.jpeg">
         <h2 class="description">A great use of older bananas and not need for a mixer either!</h2>
         <p class="ingredients">Ingredients:
             <ul>
