--- a/Pages/chocolate.html
+++ b/Pages/chocolate.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title id="title">Chocolate Crinkle Cookies</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body class="page1">
     <div class="bodydiv">
         <h1>Chocolate Crinkle Cookies</h1>
-        <img class="foodimg" src="images/chocolate-crinkle-cookies-2-1.jpg">
+        <img class="foodimg" src="../images/chocolate-crinkle-cookies-2-1.jpg">
         <h2 class="description">Thick and soft-baked cookies with a little extra chocolate in the middle!</h2>
         <p class="ingredients">Ingredients:
             <ul>
