--- a/Pages/monkeybread.html
+++ b/Pages/monkeybread.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title id="title">Monkey Bread</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body class="page1">
     <div class="bodydiv">
         <h1>Monkey Bread</h1>
-        <img class="foodimg" src="images/monkeybread.jpeg">
+        <img class="foodimg" src="../images/monkeybread.jpeg">
         <h2 class="description">A sticky and simple recipe that is quite easy to make despite it's extraordinary flavor!</h2>
         <p class="ingredients">Ingredients:
             <ul>
