--- a/Pages/pie.html
+++ b/Pages/pie.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title id="title">Apple pie</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body class="page1">
     <div class="bodydiv">
         <h1>Apple pie</h1>
-        <img class="foodimg" src="images/applepie.jpeg">
+        <img class="foodimg" src="../images/applepie.jpeg">
         <h2 class="description">Delicious apple pie that will smell just as good as it tastes!</h2>
         <p class="ingredients">Ingredients:
             <ul>
