--- a/Pages/starfruit.html
+++ b/Pages/starfruit.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title id="title">Icy Carambola</title>
-    <link href="styles.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 
 <body class="page1">
     <div class="bodydiv">
         <h1>Icy Carambola</h1>
-        <img class="foodimg" src="images/starfruit.jpeg">
+        <img class="foodimg" src="../images/starfruit.jpeg">
         <h2 class="description">An ice beverage that is a blend of apple, pear, and citrues fruit flavors</h2>
         <p class="ingredients">Ingredients:
             <ul>
