--- a/index.html
+++ b/index.html
@@ -14,32 +14,32 @@
         <div class="listdiv">
             <!--Sweet and sour chicken card-->
             <div class="card">
-                <a href="chicken.html"><img src="images/download.jpeg"></a>
+                <a href="Pages/chicken.html"><img src="images/chicken.jpeg"></a>
                 <p id="cardLabels">Sweet and sour chicken</p>
             </div>
             <!--Apple Pie card--><!---->
             <div class="card">
-                <a href="pie.html"><img src="images/applepie.jpeg"></a>
+                <a href="Pages/pie.html"><img src="images/applepie.jpeg"></a>
                 <p id="cardLabels">Apple Pie</p>
             </div>
             <!--Chocolate Crinkle Cookies card-->
             <div class="card">
-                <a href="chocolate.html"><img src="images/chocolate-crinkle-cookies-2-1.jpg"></a>
+                <a href="Pages/chocolate.html"><img src="images/chocolate-crinkle-cookies-2-1.jpg"></a>
                 <p id="cardLabels">Chocolate Crinkle Cookies</p>
             </div>
             <!--Monkey Bread card-->
             <div class="card">
-                <a href="monkeybread.html"><img src="images/monkeybread.jpeg"></a>
+                <a href="Pages/monkeybread.html"><img src="images/monkeybread.jpeg"></a>
                 <p id="cardLabels">Monkey Bread</p>
             </div>
             <!--Banana Bread card-->
             <div class="card">
-                <a href="bananabread.html"><img src="images/bananabread.jpeg"></a>
+                <a href="Pages/bananabread.html"><img src="images/bananabread.jpeg"></a>
                 <p id="cardLabels">Banana Bread</p>
             </div>
             <!--Icy Carambola / Star fruit Quencher card-->
             <div class="card">
-                <a href="starfruit.html"><img src="images/starfruit.jpeg"></a>
+                <a href="Pages/starfruit.html"><img src="images/starfruit.jpeg"></a>
                 <p id="cardLabels">Icy Carambola</p>
             </div>
         </div>
