Filled in new recipes page with name, steps, etc.

--- a/Pages/muddybuddy.html
+++ b/Pages/muddybuddy.html
@@ -10,21 +10,21 @@
     <div class="bodydiv">
         <h1>Muddy Buddies</h1>
         <img class="foodimg" src="../images/muddybuddy.jpeg">
-        <h2 class="description"></h2>
+        <h2 class="description">Classic chocolate, peanut butter, and sugary Chex mix snack</h2>
         <p class="ingredients">Ingredients:
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>9 cups of Chex cereal</li>
+                <li>1 cup semisweet chocolate chips</li>
+                <li>1/2 cups peanut butter</li>
+                <li>1/4 cup butter or margarine</li>
+                <li>1 teaspoon vanilla</li>
+                <li>1 1/2 cups powdered sugar</li>
             </ul>
         </p>
         <h2>How to make:</h2>
-        <p><strong>1. </strong></p>
-        <p><strong>2. </strong></p>
+        <p><strong>1. </strong>Into large bowl, measure cereal; set aside</p>
+        <p><strong>2. </strong>In 1 quart microwaveable bowl, microwave the chocolate chips, peanut butter, and butter on High for 1 min and stir. Microwave for roughly 30 seconds longer, stir in vanilla. Pour mix onto cereal, stirring until evenly coated. Pout into 2-gallon resealable bag.</p>
+        <p><strong>3. </strong>Add powdered sugar. Seal bag and shake until well coated. Spread on waxed paper to cool. Store in refrigerator.</p>
     </div>
 </body>
 </html>
