--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <a href="Pages/starfruit.html"><img src="images/starfruit.jpeg"></a>
                 <p id="cardLabels">Icy Carambola</p>
             </div>
+            <!--Muddy Buddies card-->
             <div class="card">
                 <a href="Pages/muddybuddy.html"><img src="images/muddybuddy.jpeg"></a>
                 <p id="cardLabels">Muddy Buddies</p>
